# Enterprise-Expense-Automation-System-using-MCP-NLP

./: .gitignore  CHANGELOG.md  README.md  claude_desktop_config.json  db_viewer.py  main.py  main_new.py  pyproject.toml  requirements.txt
config/: departments.json
docs/: ARCHITECTURE.md  MIGRATION_GUIDE.md  MODULAR_SUMMARY.md  UV_GUIDE.md
src/: README.md  __init__.py  config.py
src/database/: __init__.py  connection.py  queries.py  schema.py
src/models/: __init__.py  department.py  employee.py  expense.py  performance.py
src/services/: __init__.py  ai_service.py  department_service.py  employee_service.py  expense_service.py  performance_service.py
src/tools/: __init__.py  ai_tools.py  department_tools.py  employee_tools.py  expense_tools.py  performance_tools.py
src/utils/: __init__.py  formatters.py  validators.py
